--- a/Createx/index.html
+++ b/Createx/index.html
@@ -22,21 +22,21 @@
             <a class="header__logo logo" href="#">
               <img src="images/logo.svg" alt="logo">
             </a>
-            <nav class="haeder__nav">
+            <nav class="header__nav">
               <ul class="header__nav-list">
-                <li class="haeder__nav-item">
+                <li class="header__nav-item">
                   <a class="header__nav-link" href="#">About Us</a>
                 </li>
-                <li class="haeder__nav-item">
+                <li class="header__nav-item">
                   <a class="header__nav-link" href="#">Courses</a>
                 </li>
-                <li class="haeder__nav-item">
+                <li class="header__nav-item">
                   <a class="header__nav-link" href="#">Events</a>
                 </li>
-                <li class="haeder__nav-item">
+                <li class="header__nav-item">
                   <a class="header__nav-link" href="#">Blog</a>
                 </li>
-                <li class="haeder__nav-item">
+                <li class="header__nav-item">
                   <a class="header__nav-link" href="#">Contacts</a>
                 </li>
               </ul>
@@ -108,7 +108,7 @@
             <div class="about__createx">
               <div class="about__createx-content">
                 <div class="about__heading heading">
-                  <p class="haeding__subtitle">About us</p>
+                  <p class="heading__subtitle">About us</p>
                   <h2 class="heading__title">Createx Online School</h2>
                 </div>
                 <div class="about__text">
@@ -167,7 +167,7 @@
         <div class="container">
           <div class="directions__inner">
             <div class="directions__heading heading heading--text-center">
-              <p class="haeding__subtitle">our main directions</p>
+              <p class="heading__subtitle">our main directions</p>
               <h2 class="heading__title">What do we teach</h2>
             </div>
             <div class="directions__body">
@@ -281,7 +281,7 @@
           <div class="cert__inner">
             <div class="cert__content">
               <div class="cert__heading heading">
-                <p class="haeding__subtitle">Createx Certificate</p>
+                <p class="heading__subtitle">Createx Certificate</p>
                 <h2 class="heading__title">Your expertise will be confirmed</h2>
               </div>
               <p class="cert__text">
@@ -310,7 +310,7 @@
         <div class="container">
           <div class="team__inner">
             <div class="team__heading heading">
-              <p class="haeding__subtitle">Best tutors are all here</p>
+              <p class="heading__subtitle">Best tutors are all here</p>
               <h2 class="heading__title">Meet our team</h2>
               <div class="team__slider-arrows">
                 <a class="team__slider-arrow team__slider-prev" href="#">
@@ -613,7 +613,7 @@
         <div class="container">
           <div class="testimonials__inner">
             <div class="testimonials__heading heading heading--text-center">
-              <p class="haeding__subtitle">TESTIMONIALS</p>
+              <p class="heading__subtitle">TESTIMONIALS</p>
               <h2 class="heading__title">What our students say</h2>
             </div>
             <div class="testimonials__slider-wrapper">
@@ -737,7 +737,7 @@
         <div class="container">
           <div class="companieas__inner">
             <div class="companies__heading heading heading--text-center">
-              <p class="haeding__subtitle">best jobs for you</p>
+              <p class="heading__subtitle">best jobs for you</p>
               <h2 class="heading__title">Our students work here</h2>
             </div>
             <ul class="companies__grid">
@@ -810,8 +810,8 @@
           <div class="program__inner">
             <div class="program__content">
               <div class="program__heading heading">
-                <p class="haeding__subtitle">best jobs for you</p>
-                <h2 class="heading__title">Our students work here</h2>
+                <p class="heading__subtitle">Course program</p>
+                <h2 class="heading__title">What will you learn</h2>
               </div>
               <ul class="program__acc">
                 <li class="program__acc-item">
@@ -820,7 +820,8 @@
                       <span>Lesson 1.</span> Aliquet lectus urna viverra in odio.
                     </div>
                     <p class="program__acc-text" style="display: none;">
-                      Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim, ornare. Lacus
+                      Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim, ornare.
+                      Lacus
                       facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit sed. Curabitur
                       faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci vitae accumsan id.
                     </p>
@@ -832,7 +833,8 @@
                       <span>Lesson 1.</span> Aliquet lectus urna viverra in odio.
                     </div>
                     <p class="program__acc-text" style="display: none;">
-                      Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim, ornare. Lacus
+                      Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim, ornare.
+                      Lacus
                       facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit sed. Curabitur
                       faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci vitae accumsan id.
                     </p>
@@ -844,7 +846,8 @@
                       <span>Lesson 1.</span> Aliquet lectus urna viverra in odio.
                     </div>
                     <p class="program__acc-text" style="display: none;">
-                      Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim, ornare. Lacus
+                      Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim, ornare.
+                      Lacus
                       facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit sed. Curabitur
                       faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci vitae accumsan id.
                     </p>
@@ -856,7 +859,8 @@
                       <span>Lesson 1.</span> Aliquet lectus urna viverra in odio.
                     </div>
                     <p class="program__acc-text" style="display: none;">
-                      Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim, ornare. Lacus
+                      Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim, ornare.
+                      Lacus
                       facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit sed. Curabitur
                       faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci vitae accumsan id.
                     </p>
@@ -868,7 +872,8 @@
                       <span>Lesson 1.</span> Aliquet lectus urna viverra in odio.
                     </div>
                     <p class="program__acc-text" style="display: none;">
-                      Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim, ornare. Lacus
+                      Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim, ornare.
+                      Lacus
                       facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit sed. Curabitur
                       faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci vitae accumsan id.
                     </p>
@@ -880,7 +885,8 @@
                       <span>Lesson 1.</span> Aliquet lectus urna viverra in odio.
                     </div>
                     <p class="program__acc-text" style="display: none;">
-                      Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim, ornare. Lacus
+                      Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim, ornare.
+                      Lacus
                       facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit sed. Curabitur
                       faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci vitae accumsan id.
                     </p>
@@ -892,7 +898,8 @@
                       <span>Lesson 1.</span> Aliquet lectus urna viverra in odio.
                     </div>
                     <p class="program__acc-text" style="display: none;">
-                      Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim, ornare. Lacus
+                      Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim, ornare.
+                      Lacus
                       facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit sed. Curabitur
                       faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci vitae accumsan id.
                     </p>
@@ -904,7 +911,8 @@
                       <span>Lesson 1.</span> Aliquet lectus urna viverra in odio.
                     </div>
                     <p class="program__acc-text" style="display: none;">
-                      Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim, ornare. Lacus
+                      Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim, ornare.
+                      Lacus
                       facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit sed. Curabitur
                       faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci vitae accumsan id.
                     </p>
@@ -915,6 +923,95 @@
             <div class="program__image">
               <img src="images/program-img.svg" alt="">
             </div>
+          </div>
+        </div>
+      </section>
+      <section class="main__blog blog">
+        <div class="container">
+          <div class="blog__inner">
+            <div class="blog__top">
+              <div class="blog__heading heading">
+                <p class="heading__subtitle">Our blog</p>
+                <h2 class="heading__title">Latest posts</h2>
+              </div>
+              <a class="blog__btn button" href="#">Go to blog</a>
+            </div>
+            <ul class="blog__row">
+              <li class="blog__item blog__item--podcast">
+                <a class="blog__item-link" href="#">
+                  <article class="blog__item-inner">
+                    <div class="blog__image-box">
+                      <img src="images/blog/1.jpg" alt="">
+                      <span>Podcast</span>
+                    </div>
+                    <div class="blog__item-content">
+                      <div class="blog__item-info">
+                        <div class="blog__info-el blog__info-dir">Marketing</div>
+                        <time class="blog__info-el blog__info-date">September 4, 2020</time>
+                        <time class="blog__info-el blog__info-time">36 min</time>
+                      </div>
+                      <h4 class="blog__item-title">
+                        What is traffic arbitrage and does it really make money?
+                      </h4>
+                      <p class="blog__item-text">
+                        Pharetra, ullamcorper iaculis viverra parturient sed id sed. Convallis proin dignissim lacus,
+                        purus gravida...
+                      </p>
+                      <div class="blog__item-button">Listen</div>
+                    </div>
+                  </article>
+                </a>
+              </li>
+              <li class="blog__item blog__item--video">
+                <a class="blog__item-link" href="#">
+                  <article class="blog__item-inner">
+                    <div class="blog__image-box">
+                      <img src="images/blog/2.jpg" alt="">
+                      <span>Video</span>
+                    </div>
+                    <div class="blog__item-content">
+                      <div class="blog__item-info">
+                        <div class="blog__info-el blog__info-dir">Marketing</div>
+                        <time class="blog__info-el blog__info-date">September 4, 2020</time>
+                        <time class="blog__info-el blog__info-time">36 min</time>
+                      </div>
+                      <h4 class="blog__item-title">
+                        What is traffic arbitrage and does it really make money?
+                      </h4>
+                      <p class="blog__item-text">
+                        Pharetra, ullamcorper iaculis viverra parturient sed id sed. Convallis proin dignissim lacus,
+                        purus gravida...
+                      </p>
+                      <div class="blog__item-button">Listen</div>
+                    </div>
+                  </article>
+                </a>
+              </li>
+              <li class="blog__item blog__item--article">
+                <a class="blog__item-link" href="#">
+                  <article class="blog__item-inner">
+                    <div class="blog__image-box">
+                      <img src="images/blog/3.jpg" alt="">
+                      <span>Article</span>
+                    </div>
+                    <div class="blog__item-content">
+                      <div class="blog__item-info">
+                        <div class="blog__info-el blog__info-dir">Design</div>
+                        <time class="blog__info-el blog__info-date">September 4, 2020</time>
+                      </div>
+                      <h4 class="blog__item-title">
+                        What is traffic arbitrage and does it really make money?
+                      </h4>
+                      <p class="blog__item-text">
+                        Pharetra, ullamcorper iaculis viverra parturient sed id sed. Convallis proin dignissim lacus,
+                        purus gravida...
+                      </p>
+                      <div class="blog__item-button">Listen</div>
+                    </div>
+                  </article>
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
       </section>
