--- a/Createx/index.html
+++ b/Createx/index.html
@@ -60,7 +60,7 @@
         <div class="container">
           <div class="header__body-inner">
             <div class="header__main">
-              <div class="headre__content">
+              <div class="header__content">
                 <a class="header__play" href="#">
                   <svg width="52" height="52" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="26" cy="26" r="26" fill="#FF3F3A" />
@@ -78,7 +78,7 @@
                   <a class="header__content-btn button" href="#">Explore courses</a>
                 </div>
               </div>
-              <img class=".header__img" src="images/hero-image.svg" alt="">
+              <img class="header__img" src="images/hero-image.svg" alt="">
             </div>
             <ul class="header__row">
               <li class="header__row-item">
@@ -610,6 +610,7 @@
                 </div>
               </div>
             </div>
+            <div class="team__dots"></div>
           </div>
         </div>
       </section>
@@ -744,68 +745,70 @@
               <p class="heading__subtitle">best jobs for you</p>
               <h2 class="heading__title">Our students work here</h2>
             </div>
-            <ul class="companies__grid">
-              <li class="companies__grid-item">
-                <a class="companies__grid-link" href="#">
-                  <img src="images/logos/logo-11.svg" alt="">
-                </a>
-              </li>
-              <li class="companies__grid-item">
-                <a class="companies__grid-link" href="#">
-                  <img src="images/logos/logo-11.svg" alt="">
-                </a>
-              </li>
-              <li class="companies__grid-item">
-                <a class="companies__grid-link" href="#">
-                  <img src="images/logos/logo-11.svg" alt="">
-                </a>
-              </li>
-              <li class="companies__grid-item">
-                <a class="companies__grid-link" href="#">
-                  <img src="images/logos/logo-11.svg" alt="">
-                </a>
-              </li>
-              <li class="companies__grid-item">
-                <a class="companies__grid-link" href="#">
-                  <img src="images/logos/logo-11.svg" alt="">
-                </a>
-              </li>
-              <li class="companies__grid-item">
-                <a class="companies__grid-link" href="#">
-                  <img src="images/logos/logo-11.svg" alt="">
-                </a>
-              </li>
-              <li class="companies__grid-item">
-                <a class="companies__grid-link" href="#">
-                  <img src="images/logos/logo-11.svg" alt="">
-                </a>
-              </li>
-              <li class="companies__grid-item">
-                <a class="companies__grid-link" href="#">
-                  <img src="images/logos/logo-11.svg" alt="">
-                </a>
-              </li>
-              <li class="companies__grid-item">
-                <a class="companies__grid-link" href="#">
-                  <img src="images/logos/logo-11.svg" alt="">
-                </a>
-              </li>
-              <li class="companies__grid-item">
-                <a class="companies__grid-link" href="#">
-                  <img src="images/logos/logo-11.svg" alt="">
-                </a>
-              </li>
-              <li class="companies__grid-item">
-                <a class="companies__grid-link" href="#">
-                  <img src="images/logos/logo-11.svg" alt="">
-                </a>
-              </li>
-              <li class="companies__grid-item">
-                <a class="companies__grid-link" href="#">
-                  <img src="images/logos/logo-11.svg" alt="">
-                </a>
-              </li>
-            </ul>
+            <div class="companies__grid-wrapper">
+              <ul class="companies__grid">
+                <li class="companies__grid-item">
+                  <a class="companies__grid-link" href="#">
+                    <img src="images/logos/logo-11.svg" alt="">
+                  </a>
+                </li>
+                <li class="companies__grid-item">
+                  <a class="companies__grid-link" href="#">
+                    <img src="images/logos/logo-11.svg" alt="">
+                  </a>
+                </li>
+                <li class="companies__grid-item">
+                  <a class="companies__grid-link" href="#">
+                    <img src="images/logos/logo-11.svg" alt="">
+                  </a>
+                </li>
+                <li class="companies__grid-item">
+                  <a class="companies__grid-link" href="#">
+                    <img src="images/logos/logo-11.svg" alt="">
+                  </a>
+                </li>
+                <li class="companies__grid-item">
+                  <a class="companies__grid-link" href="#">
+                    <img src="images/logos/logo-11.svg" alt="">
+                  </a>
+                </li>
+                <li class="companies__grid-item">
+                  <a class="companies__grid-link" href="#">
+                    <img src="images/logos/logo-11.svg" alt="">
+                  </a>
+                </li>
+                <li class="companies__grid-item">
+                  <a class="companies__grid-link" href="#">
+                    <img src="images/logos/logo-11.svg" alt="">
+                  </a>
+                </li>
+                <li class="companies__grid-item">
+                  <a class="companies__grid-link" href="#">
+                    <img src="images/logos/logo-11.svg" alt="">
+                  </a>
+                </li>
+                <li class="companies__grid-item">
+                  <a class="companies__grid-link" href="#">
+                    <img src="images/logos/logo-11.svg" alt="">
+                  </a>
+                </li>
+                <li class="companies__grid-item">
+                  <a class="companies__grid-link" href="#">
+                    <img src="images/logos/logo-11.svg" alt="">
+                  </a>
+                </li>
+                <li class="companies__grid-item">
+                  <a class="companies__grid-link" href="#">
+                    <img src="images/logos/logo-11.svg" alt="">
+                  </a>
+                </li>
+                <li class="companies__grid-item">
+                  <a class="companies__grid-link" href="#">
+                    <img src="images/logos/logo-11.svg" alt="">
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </section>
@@ -1254,8 +1257,8 @@
               </ul>
             </div>
             <div class="footer__top-col">
-              <h3 class="footer__top-title">SITE maP</h3>
-              <ul class="footer__top-l">
+              <h3 class="footer__top-title footer__top-title--slide">SITE maP</h3>
+              <ul class="footer__top-list">
                 <li class="footer__top-item">
                   <a class="footer__item-link" href="#">About Us</a>
                 </li>
@@ -1274,7 +1277,7 @@
               </ul>
             </div>
             <div class="footer__top-col">
-              <h3 class="footer__top-title">COURSes</h3>
+              <h3 class="footer__top-title footer__top-title--slide">COURSes</h3>
               <ul class="footer__top-list">
                 <li class="footer__top-item">
                   <a class="footer__item-link" href="#">Marketing</a>
@@ -1294,7 +1297,7 @@
               </ul>
             </div>
             <div class="footer__top-col">
-              <h3 class="footer__top-title">CONTact US</h3>
+              <h3 class="footer__top-title footer__top-title--slide">CONTact US</h3>
               <ul class="footer__top-list">
                 <li class="footer__top-item">
                   <a class="footer__item-link" href="tel:4055550128">
